Adicionando texto Lorem

--- a/teste.html
+++ b/teste.html
@@ -8,13 +8,18 @@
 <body>
     <h1 style="color:rgb(180, 155, 82)">Teste de Git</h1>
     <button onclick="changeBackgroundColor()">DarkMode</button>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, consequatur quaerat hic optio reprehenderit quod sunt dolore molestias, quos consectetur quibusdam odit voluptas ex eius quo, beatae accusamus tempora fuga.
+    Aliquid, ipsam deleniti? In esse laborum veritatis fugit. Minima nemo quos reprehenderit iure vel quod deleniti sunt accusamus reiciendis, impedit veritatis, cumque similique eveniet. Sit, saepe ducimus? Atque, dolore minima.
+    Vero, quo inventore. Adipisci animi voluptate aliquam sint doloribus? At voluptates obcaecati quod illum sint consequatur porro modi excepturi numquam pariatur voluptatem nihil doloribus labore magnam quaerat, ducimus exercitationem minus!
+    Ut reiciendis accusamus, sequi excepturi blanditiis totam placeat non architecto itaque. Dolore voluptatibus impedit tenetur minima, aspernatur, dolor libero enim esse ad repellendus perspiciatis velit nulla voluptatem eligendi, omnis itaque?
+    Soluta, animi voluptate consectetur magnam esse assumenda officiis omnis molestias non sequi sapiente incidunt eveniet? Velit dolores enim ut quidem hic cupiditate qui accusantium eaque commodi provident ad, soluta temporibus.</p>
 
     <script>
         function changeBackgroundColor()
     {let cor = "rgb(0, 0, 0)"
 
     if  (document.body.style.backgroundColor === cor)
-    {cor = "rgb(255, 255, 255)"}
+    {cor = "rgb(223, 191, 96)"}
     else {cor = "rgb(0, 0, 0)"}
 
         document.body.style.backgroundColor = cor}
